--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@
                 <div id="productos" class="productos">
                     <img src="IMAGES/discovinilo.jpg
                     " alt="vinilo">
-                    <img src="IMAGES/vhs.webp" alt="Cumple">
-                    <img src="IMAGES/cassette.jpg" alt="leon">
-                    <img src="IMAGES/8E8EA438-F67E-4BA9-AB01-39246F468DB9.JPG" alt="torta">
-                </div>
-                <div id="productos" class = "productos">
-                    <img src="IMAGES/minidv.jpeg" alt="minidv">
-                    <img src="IMAGES/dvd.png" alt="Cumple2">
+                    <img src="IMAGES/vhs.webp" alt="VHS">
+                    <img src="IMAGES/cassette.jpg" alt="CASSETTE">
                     
-                    <img src="IMAGES/camara.jpg" alt="camara">
+                <div id="productos" class = "PRODUCTOS">
+                    <img src="IMAGES/minidv.jpeg" alt="MINIDV">
+                    <img src="IMAGES/dvd.png" alt="DVD">
+                    
+                    <img src="IMAGES/camara.jpg" alt="CAMARA">
                 </div>
 
             </div>
